# testa

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  SConscript  SConstruct  build-cpp.py  lang.config  runtests.py
clj/: README.txt  SConscript
clj/example/: main.clj
clj/testa/: core.clj
cpp/: CMakeLists.txt  SConscript  metaprogramming.hpp  pp_optional.hpp  pp_refwrap.hpp  pp_tuple.hpp  pp_unittest.cpp  prettyprint.cpp  prettyprint.hpp  prettyprint.ipp  testa.cpp  testa.hpp  testa.ipp  testa_main.cpp  testa_unittest.cpp
erlang/: SConscript  testa.erl  testa_test.erl
lua/: README.txt  testa.lua  testa_test.lua
python/: testa.py  testa_test.py
runtests/: argparser.clj  main.clj  utilities.clj
rust/: SConscript  rust_unittest.rs  testa.rs
testa/: core.clj
